# MCP-dump

./: .gitignore  README.md
ai-agent-postgres-mcp/: README.md
mcp-files/: .gitignore  LICENSE  README.md  pyproject.toml
mcp-files/examples/clients/: base.py  gemini.py  react_agent.py
mcp-files/mcp-hello/: README.md
mcp-files/mcp-server/: README.md  pyproject.toml
mcp-files/mcp-server/src/mcp_server/: __init__.py  cli.py  config.py  helpers.py  mcp.py  tools.py
mcp-hello/: package-lock.json  package.json  wrangler.jsonc
mcp-hello/src/: index.ts
mcp-postgres/: ai_agent.ipynb  main.py
