[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jayanth MKV", email = "mkvjayanth1@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["fastmcp>=2.12.3"]

[project.scripts]
# Console script entry point (invoked via: uv run mcp-server --help)
mcp-server = "mcp_server.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
